# intro-to-weaviate-agents

./: .env  .env.example  .gitignore  README.md  build_student_notebooks.py  helpers.py  pyproject.toml  requirements.txt  transformation-agent-workshop.ipynb  try_this.py  wv-personalization-agent-finished.ipynb  wv-personalization-agent.ipynb  wv-query-agent-finished.ipynb  wv-query-agent.ipynb  wv-transformation-agent-finished.ipynb  wv-transformation-agent.ipynb
data/: simplified_posts.json
finished_notebooks/: transformation-agent-workshop.ipynb  wv-personalization-agent.ipynb  wv-query-agent.ipynb
